--- a/qml.qrc
+++ b/qml.qrc
@@ -1,8 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>window.qml</file>
         <file>images/Holochain50+alpha.png</file>
         <file>images/Holochain600cropped+alpha.png</file>
+        <file>AppWidget.qml</file>
     </qresource>
 </RCC>
