--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,7 @@
         <file>images/Holochain600cropped+alpha.png</file>
         <file>AppWidget.qml</file>
         <file>images/HoloSqape-system-tray.png</file>
+        <file>apps/test.json</file>
+        <file>apps/info.json</file>
     </qresource>
 </RCC>
