Refactor main.qml
Extract Console.qml and move generic UI to rootUIs subfolder and instantiate dynamically.
Add Dock.

--- a/holosqape/qml.qrc
+++ b/holosqape/qml.qrc
@@ -3,11 +3,16 @@
         <file>main.qml</file>
         <file>images/Holochain50+alpha.png</file>
         <file>images/Holochain600cropped+alpha.png</file>
-        <file>AppWidget.qml</file>
+        <file>rootUIs/GenericUI/AppWidget.qml</file>
         <file>images/HoloSqape-system-tray.png</file>
         <file>apps/test.json</file>
         <file>apps/info.json</file>
         <file>SystemTrayMenu.qml</file>
-        <file>FunctionCallWidget.qml</file>
+        <file>rootUIs/GenericUI/FunctionCallWidget.qml</file>
+        <file>rootUIs/GenericUI/main.qml</file>
+        <file>Console.qml</file>
+        <file>Dock.qml</file>
+        <file>images/console.png</file>
+        <file>images/blank.svg</file>
     </qresource>
 </RCC>
